# pree

./: .gitignore  CLAUDE.md  CODERABBIT_FIXES.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SOCKET_LIBPROC_INTEGRATION.md  bench_output.txt
.github/: dependabot.yml
.github/workflows/: benchmark.yaml  format.yaml  release.yaml  test.yaml
benches/: socket_performance.rs
examples/: bandwidth_monitor.rs  dns_config.rs  interface_stats.rs  port_checker.rs  routing_table.rs  socket_analysis.rs  socket_info_libproc.rs  socket_monitor.rs
src/: dns.rs  error.rs  interface.rs  lib.rs  platform.rs  routing.rs  types.rs  unix.rs  windows.rs
src/dns/: cache.rs  mod.rs  resolver.rs
src/interface/: mod.rs  monitor.rs  nat.rs
src/socket/: mod.rs  monitor.rs  platform.rs  socket.rs  tcp.rs  udp.rs
tests/: linux_tests.rs  macos_tests.rs  socket_discovery.rs
tests/integration/: mod.rs
tests/platform/: mod.rs
