[package]
authors     = ["Chad Nehemiah <chad.nehemiah94@gmail.com>"]
categories  = ["network-programming", "os", "development-tools::debugging"]
description = "Cross-platform network diagnostics and monitoring for Rust applications"
edition     = "2021"
keywords    = ["network", "monitoring", "sockets", "diagnostics", "cross-platform", "pree"]
license     = "MIT OR Apache-2.0"
name        = "pree"
readme      = "README.md"
repository  = "https://github.com/maschad/pree"
version     = "1.0.0"

[dependencies]
# Core dependencies
bytesize         = "2.0.1"
env_logger       = "0.11.8"
hickory-resolver = "0.24"
libc             = "0.2.172"
libproc          = "0.14.10"
log              = "0.4.27"
nix              = { version = "0.30.1", features = ["net", "socket"] }
procfs           = { version = "0.18.0", optional = true }
thiserror        = "2.0.12"


# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "ws2def",
    "ws2ipdef",
    "netioapi",
    "iphlpapi",
    "iptypes",
    "ntdef",
    "winerror",
    "processthreadsapi",
    "handleapi",
] }

# Optional dependencies
async-trait = { version = "0.1", optional = true }
tokio       = { version = "1.0", features = ["full"], optional = true }

# Serde support (conditionally enabled)
[dependencies.serde]
features = ["derive"]
optional = true
version  = "1.0.219"

[features]
async           = ["tokio", "async-trait"]
default         = []
dns-cache       = []
linux-procfs    = ["procfs"]
nat-detection   = []
serde-support   = ["serde"]
socket-tracking = []

[dev-dependencies]
criterion  = "0.5"
mockall    = "0.13.1"
tokio-test = "0.4.4"

[[bench]]
harness = false
name    = "socket_performance"

[[example]]
name              = "interface_stats"
path              = "examples/interface_stats.rs"
required-features = []

[[example]]
name              = "bandwidth_monitor"
path              = "examples/bandwidth_monitor.rs"
required-features = []

[[example]]
name              = "dns_config"
path              = "examples/dns_config.rs"
required-features = ["dns-cache"]

[[example]]
name              = "routing_table"
path              = "examples/routing_table.rs"
required-features = []

[[example]]
name              = "socket_monitor"
path              = "examples/socket_monitor.rs"
required-features = ["socket-tracking"]

[[example]]
name              = "port_checker"
path              = "examples/port_checker.rs"
required-features = ["socket-tracking"]

[[example]]
name              = "socket_info_libproc"
path              = "examples/socket_info_libproc.rs"
required-features = ["socket-tracking"]
